# geobn

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: tests.yml
api/internals/: index.html
api/network/: index.html
api/realtime/: index.html
api/result/: index.html
api/sources/: index.html
api/sources/core/: index.html
api/sources/ocean/: index.html
api/sources/terrain/: index.html
api/sources/wcs/: index.html
api/sources/weather/: index.html
concepts/: index.html
contributing/: index.html
docs/api/: network.md  realtime.md
docs/examples/: ship_route_planning_risk.md
examples/calabria_wildfire/: run_example.py  wildfire_risk.bif
examples/lyngen_alps/: avalanche_risk.bif  index.html  run_example.py
examples/maritime_norway/: run_example.py
examples/ship_route_planning_risk/: run_example.py  ship_route_planning_risk.bif
examples/synthetic_fire_risk/: fire_risk.bif  run_example.py
installation/: index.html
search/: search_index.json
src/geobn/: __init__.py  _io.py  _types.py  _viz.py  discretize.py  grid.py  inference.py  network.py  result.py
src/geobn/sources/: __init__.py  _base.py  _cache.py  _point_sampling.py  array_source.py  barentswatch_source.py  constant_source.py  copernicus_source.py  emodnet_source.py  hubocean_source.py  kartverket_source.py  met_norway_source.py  openmeteo_source.py  raster_source.py  url_source.py  wcs_source.py
tests/: conftest.py  test_cache.py  test_discretize.py  test_grid.py  test_inference.py  test_integration.py  test_new_sources.py  test_realtime.py  test_result.py  test_sources.py  test_viz.py
tools/: xdsl_to_bif.py
