[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geobn"
version = "0.1.0"
description = "Bayesian network inference over geographic space"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pgmpy>=0.1.25",
    "numpy>=1.26",
    "xarray>=2024.1",
    "requests>=2.31",
    "pyproj>=3.6",
    "affine>=2.4",
]

[project.optional-dependencies]
io    = ["rasterio>=1.3"]
ocean = ["copernicusmarine>=2.0", "pystac-client>=0.7"]
dev   = ["pytest>=8.0", "pytest-cov>=5.0", "rasterio>=1.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/geobn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
