[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geobn"
version = "0.1.0"
description = "Bayesian network inference over geographic space"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Jens Einar Bremnes"}]
license = {text = "MIT"}
keywords = ["bayesian-network", "geospatial", "raster", "inference", "probabilistic", "gis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pgmpy>=1.0",
    "numpy>=1.26",
    "requests>=2.31",
    "pyproj>=3.6",
    "affine>=2.4",
]

[project.optional-dependencies]
io    = ["rasterio>=1.3"]
viz   = ["folium>=0.14", "matplotlib>=3.0"]
ocean = ["copernicusmarine>=2.0", "pystac-client>=0.7"]
full  = ["geobn[io,viz]", "xarray>=2024.1"]
docs  = ["mkdocs>=1.6,<2.0", "mkdocs-material>=9.5,<10.0", "mkdocstrings[python]>=0.25"]
dev   = ["geobn[full]", "pytest>=8.0", "pytest-cov>=5.0"]

[project.urls]
Homepage = "https://jensebr.github.io/geobn"
Repository = "https://github.com/jensebr/geobn"
"Bug Tracker" = "https://github.com/jensebr/geobn/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/geobn"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
